# clock

./: .gitignore  Cargo.toml  clock_DEBUG.db
migrations/: 0001_work_hours.sql
src/: cli.rs  crud.rs  display.rs  main.rs  main_bak.rs  models.rs
